# GWAN-Engine

./: .gitignore  CMakeLists.txt  README  Read.me
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/gcc/: settings.cmake
cmake/macros/: CheckBuildDir.cmake  FindACE.cmake  FindALUT.cmake  FindAngelscript.cmake  FindGLM.cmake  FindGit.cmake  FindJPEG.cmake  FindLibTorrent.cmake  FindOpenAL.cmake  FindOpenSSL.cmake  FindSleepFunction.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/SFMT/: SFMT.h  randomc.h
dep/acelite/ace/: ACE_vc11.vcxproj  ACE_vc12.vcxproj  ACE_vc12.vcxproj.filters  CMakeLists.txt  GNUmakefile  GNUmakefile.ACE  ace.mpc  ace_vc11.sln  ace_vc12.sln  config-macros.h
dep/acelite/ace/Compression/: ACE_Compression_vc11.vcxproj  Compression_vc11.sln  Compression_vc12.sln  GNUmakefile  GNUmakefile.ACE_Compression
dep/acelite/ace/Compression/rle/: ACE_RLECompression_vc11.vcxproj  GNUmakefile  GNUmakefile.ACE_RLECompression  rle_vc11.sln  rle_vc12.sln
dep/acelite/ace/ETCL/: ACE_ETCL_Parser_vc11.vcxproj  ACE_ETCL_vc11.vcxproj  ETCL_l.cpp  ETCL_vc11.sln  ETCL_vc12.sln  ETCL_y.cpp  GNUmakefile  GNUmakefile.ACE_ETCL  GNUmakefile.ACE_ETCL_Parser
dep/acelite/ace/FlReactor/: GNUmakefile  GNUmakefile.ACE_FlReactor
dep/acelite/ace/Monitor_Control/: GNUmakefile  GNUmakefile.Monitor_Control  Monitor_Control_vc11.sln  Monitor_Control_vc11.vcxproj  Monitor_Control_vc12.sln  Monitor_Control_vc12.vcxproj
dep/acelite/ace/QoS/: QoS_vc11.sln  QoS_vc11.vcxproj
dep/acelite/ace/QtReactor/: GNUmakefile  GNUmakefile.ACE_Qt4Reactor  GNUmakefile.ACE_Qt4Reactor_moc
dep/acelite/ace/SSL/: GNUmakefile  GNUmakefile.SSL
dep/acelite/ace/TkReactor/: GNUmakefile  GNUmakefile.ACE_TkReactor
dep/acelite/ace/XtReactor/: GNUmakefile  GNUmakefile.ACE_XtReactor
dep/alure/: CMakeLists.txt
dep/alure/cmake/: FindMPEG123.cmake  FindModPlug.cmake
dep/alure/include/: main.h
dep/alure/src/: codec_flac.cpp
dep/angelscript/: CMakeLists.txt
dep/freetype/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libpng/: CMakeLists.txt  png.h
dep/win/: CMakeLists.txt
dep/win/libmodplug/: CMakeLists.txt
dep/win/libmpg123/: COPYING.txt  NEWS.txt  README.txt  libmpg123-0.dll.exp
dep/win/libmpg123/include/: mpg123.h
dep/win/libmpg123/lib/: libmpg123.lib
dep/zlib/: CMakeLists.txt
doc/: CreatureScriptBefehle  ObjectMgr  ScriptBefehle  ScriptKonstrukt  Sound.html  Textures.html  WorldObjectKonstrukt
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  client.rc  main.cpp  wrapper.cpp  wrapper.h
src/Client/BackgroundDownloader/: BackgroundDownloadHandler.cpp  BackgroundDownloadProtocol.cpp  BackgroundDownloadProtocol.hpp  BackgroundDownloadSession.cpp  BackgroundDownloadSession.hpp  BackgroundDownloadSystem.cpp  BackgroundDownloadSystem.hpp
src/Client/Downloading/: DownloadHandler.cpp  DownloadProtocol.cpp  DownloadProtocol.hpp  DownloadSession.cpp  DownloadSession.hpp  DownloadSystem.cpp  DownloadSystem.hpp
src/Client/GameObjects/: Creature.cpp  Creature.hpp  ObjectMgr.cpp  ObjectMgr.hpp  Player.cpp  Player.hpp  WorldObject.cpp  WorldObject.hpp  WorldObjectScript.cpp  WorldObjectScript.hpp
src/Client/Launcher/: Launcher.cpp  Launcher.hpp  Sound.cpp  Sound.hpp  SoundMgr.cpp  SoundMgr.hpp
src/Client/Misc/: ClientCommon.h  Common.h  CompilerDefs.h  Define.h  FileHelper.cpp  FileHelper.hpp  GlobalVars.cpp  GlobalVars.hpp  Physics.cpp  Physics.hpp  Shader.cpp  Shader.hpp  splitstring.h
src/Client/Objects/: Object.cpp  Object.hpp
src/Client/Objects/3DModels/: 3DModel.hpp  3DObject.cpp  3DObject.hpp  MS3D.cpp  MS3D.hpp  OBJ.cpp  OBJ.hpp
src/Client/Objects/LoadingObject/: LoadingObject.cpp  LoadingObject.hpp
src/Client/Objects/Pixel/: PixelObject.cpp  PixelObject.hpp
src/Client/Objects/Plane/: PlanarObject.cpp  PlanarObject.hpp
src/Client/Objects/Sprite/: Sprite.cpp  Sprite.hpp
src/Client/Objects/Text/: TextObject.cpp  TextObject.hpp  Textbox.cpp  Textbox.hpp
src/Client/Objects/Tilemap/: Tilemap.cpp  Tilemap.hpp
src/Client/PrecompiledHeaders/: clientPCH.cpp  clientPCH.h
src/Client/ScriptSystem/: ScriptObject.cpp  ScriptObject.hpp  ScriptObjectManipulations.cpp  ScriptObjectShader.cpp  ScriptObjectSound.cpp  ScriptObjectSprite.cpp  ScriptObjectText.cpp  ScriptObjectTextures.cpp  ScriptObjectTilemap.cpp  ScriptObjectWorldObject.cpp  scriptmgr.cpp  scriptmgr.h
src/Client/TextureLoader/: ShaderLoader.cpp  ShaderLoader.hpp  TGA.cpp  TGA.hpp  TextureLoader.cpp  TextureLoader.hpp
src/Server/: CMakeLists.txt  Main.cpp  server.conf.dist
src/Server/Configuration/: Common.hpp  Configuration.cpp  Configuration.hpp  Misc.hpp
src/Server/Downloading/: DownloadHandler.cpp  FileHandler.cpp  FileHandler.hpp
src/Server/Server/: Server.cpp  Server.hpp  SessionUpdater.cpp  SessionUpdater.hpp
src/Server/Server/Client/: AuthHandler.cpp  ClientSession.cpp  ClientSession.hpp  ClientSessionMgr.cpp  ClientSessionMgr.hpp  ClientSocket.cpp  ClientSocket.hpp  Opcodes.cpp  Opcodes.hpp
src/Shared/: CMakeLists.txt
src/Shared/Configuration/: CompilerDefs.hpp  Config.cpp  Config.hpp  SharedDefines.hpp
src/Shared/Cryptography/: BigNumber.cpp  BigNumber.hpp  SHA256.cpp  SHA256.hpp
src/Shared/Debugging/: Errors.h
src/Shared/Dynamic/: Splitstring.hpp  UnorderedMap.hpp
src/Shared/Logging/: Define.hpp  Log.cpp  Log.hpp
src/Shared/Misc/: Splitstring.hpp
src/Shared/Network/: AcceptSocket.hpp  Acceptor_BASE.hpp  NetworkMgr.cpp  NetworkMgr.hpp  Socket.cpp  Socket.hpp  SocketAcceptor.hpp  SocketConnector.hpp
src/Shared/Network/Protocol/: OpcodeDefines.hpp
src/Shared/Packet/: ByteBuffer.cpp  ByteBuffer.hpp  ByteConverter.hpp  WorldPacket.hpp
src/Shared/Threading/: LockedQueue.hpp  Threading.cpp  Threading.hpp  Timer.hpp
src/Shared/XML/: tinystr.cpp  tinyxml.cpp  tinyxml.hpp  tinyxmlerror.cpp  tinyxmlparser.cpp
